# 2bpp_converter

./: .gitignore  Cargo.toml  LICENSE  README.md  palette.json  palette.toml
src/: main.rs
