[package]
name = "c2bpp"
description = "basic image to .2bpp converter"
repository = "https://github.com/izzabelle/2bpp_converter"
readme = "README.md"
license = "MIT"
version = "1.0.1"
authors = ["Isabelle L. <me@izzabelle.dev>"]
edition = "2018"

[dependencies]
image = { version = "0.22", default-features = false }
structopt = "0.3"
serde = { version = "1", features = ["derive"] }
toml = { version = "0.5", default-features = false }